termino da parte do newsletter
Eu fiz online

--- a/index.html
+++ b/index.html
@@ -170,8 +170,12 @@
       <!-- secao newsletter-->
       <section  class="newsletter_container">
         <form class="container_alinhado_a_pagina" action="#" method="post">
-
-        </form>
+<label for="input_newsletter">
+lorem ipsum
+</label>
+<input type="text" id="input_newsletter" name="input_newsletter" class="input_newsletter">
+<input type="submit" value="Enviar"  id="submit_newsletter" class=" id="submit_newsletter">
+        </form> 
       </section>
       <!-- fim secao newsletter -->
       <!-- secao blog-->
