pesquisa de trens feito

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <link rel="stylesheet" href="css/colors.css" />
     <link rel="stylesheet" href="css/tendencias.css" />
     <link rel="stylesheet" href="css/slide.css" />
+    <link rel="stylesheet" href="css/busca.css">
   </head>
   <body>
     <header class="cabecalho">
@@ -171,11 +172,11 @@
       <section class="busca_container">
         <form
           class="formulario_de_busca container_alinhado_a_pagina"
-          action="#"
+          action=""
           method="post"
         >
           <label for="input_pesquisa"
-            >Encontre nossos produtos desse mes rapidamente!
+            >Encontre nossos trem desse mês rapidamente!
           </label>
           <input
             type="text"
@@ -183,7 +184,7 @@
             name="input_pesquisa"
             class="input_pesquisa"
           />
-          <input type="button" value="Buscar" />
+          <input type="submit" value="Buscar" />
         </form>
         <section class="resultados_da_pesquisa container_alinhado_a_pagina">
           sem resultados
