--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <link rel="stylesheet" href="css/colors.css" />
     <link rel="stylesheet" href="css/tendencias.css" />
     <link rel="stylesheet" href="css/slide.css" />
-    <link rel="stylesheet" href="css/busca.css">
-    <link rel="stylesheet" href="css/testimonial.css">
+    <link rel="stylesheet" href="css/busca.css" />
+    <link rel="stylesheet" href="css/testimonial.css" />
   </head>
   <body>
     <header class="cabecalho">
@@ -188,18 +188,90 @@
           <input type="submit" value="Buscar" />
         </form>
         <section class="resultados_da_pesquisa container_alinhado_a_pagina">
-          sem resultados
+          <h1>Relacionados a pesquisa:</h1>
         </section>
       </section>
       <!-- fim secao busca -->
       <!-- secao blog-->
-      <section>
-       
+      <section class="blog container_alinhado_a_pagina">
+        <h1>Blog</h1>
+        <figure>
+          <img src="/img/linha_inverno_imgs/img_2.jpg" alt="" />
+          <figcaption>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum
+            maiores accusamus est modi quas blanditiis amet earum laborum,
+            distinctio ipsa nostrum necessitatibus ex dicta esse asperiores,
+            sapiente culpa qui delectus!
+            <button>Saber mais!</button>
+          </figcaption>
+        </figure>
+        <figure>
+          <a href="">
+            <img src="/img/linha_inverno_imgs/img_2.jpg" alt="" />
+            <figcaption>
+              <sup>Terça, 25 de abril de 2022</sup>
+              <h3>Novo Lorem ipsum dolor sit amet, consectetur</h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptatum maiores accusamus est modi quas blanditiis amet earum
+                laborum, distinctio ipsa nostrum necessitatibus ex dicta esse
+                asperiores, sapiente culpa qui delectus!
+              </p>
+            </figcaption>
+          </a>
+        </figure>
       </section>
+
+      <figure>
+        <a href="">
+          <img src="/img/linha_inverno_imgs/img_2.jpg" alt="" />
+          <figcaption>
+            <sup>Terça, 25 de abril de 2022</sup>
+            <h3>Novo Lorem ipsum dolor sit amet, consectetur</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Voluptatum maiores accusamus est modi quas blanditiis amet earum
+              laborum, distinctio ipsa nostrum necessitatibus ex dicta esse
+              asperiores, sapiente culpa qui delectus!
+            </p>
+          </figcaption>
+        </a>
+      </figure>
       <!-- fim secao blog -->
       <!-- secao 4 imagens grandes-->
-      <section>
-        
+      <section class="quatro_img">
+        <article>
+          <picture>
+            <source srcset="" />
+            <img
+              src="img_orange_flowers.jpg"
+            />
+          </picture>
+        </article>
+        <article>
+          <picture>
+            <source srcset="img_pink_flowers.jpg" />
+            <img
+              src="img_orange_flowers.jpg"
+            />
+          </picture>
+        </article>
+        <article>
+          <picture>
+            <source srcset="img_pink_flowers.jpg" />
+            <img
+              src="img_orange_flowers.jpg"
+            />
+          </picture>
+        </article>
+        <article>
+          <picture>
+            <source srcset="img_pink_flowers.jpg" />
+            <img
+              src="img_orange_flowers.jpg"
+            />
+          </picture>
+        </article>
       </section>
       <!-- fim secao secao 4 imagens grandes -->
       <!-- secao testimonial-->
@@ -210,36 +282,45 @@
           <section class="testimonial_container">
             <article class="testimonial_item">
               <figure>
-                <img src="./img/linha_inverno_imgs/botas_de_inverno_1.jpg" alt="" />
+                <img
+                  src="./img/linha_inverno_imgs/botas_de_inverno_1.jpg"
+                  alt=""
+                />
                 <figcaption>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente
-                  atque consequatur ut, dignissimos quisquam quam adipisci odit, hic
-                  est consequuntur doloribus ex quas id minima optio alias officiis
-                  ipsum aperiam.
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Sapiente atque consequatur ut, dignissimos quisquam quam
+                  adipisci odit, hic est consequuntur doloribus ex quas id
+                  minima optio alias officiis ipsum aperiam.
                   <strong>texto</strong>
                 </figcaption>
               </figure>
             </article>
             <article class="testimonial_item">
               <figure>
-                <img src="./img/linha_inverno_imgs/botas_de_inverno_1.jpg" alt="" />
+                <img
+                  src="./img/linha_inverno_imgs/botas_de_inverno_1.jpg"
+                  alt=""
+                />
                 <figcaption>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab
-                  assumenda exercitationem, voluptatum quisquam perspiciatis numquam
-                  est fugiat fugit esse enim temporibus. Eum a illum quasi adipisci
-                  nesciunt saepe aut eligendi.
+                  assumenda exercitationem, voluptatum quisquam perspiciatis
+                  numquam est fugiat fugit esse enim temporibus. Eum a illum
+                  quasi adipisci nesciunt saepe aut eligendi.
                   <strong>texto</strong>
                 </figcaption>
               </figure>
             </article>
             <article class="testimonial_item">
               <figure>
-                <img src="./img/linha_inverno_imgs/botas_de_inverno_1.jpg" alt="" />
+                <img
+                  src="./img/linha_inverno_imgs/botas_de_inverno_1.jpg"
+                  alt=""
+                />
                 <figcaption>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident
-                  possimus pariatur totam velit quo. Dicta aliquam magni, blanditiis
-                  officia, corporis repellat quae, nihil maxime enim facere deserunt
-                  labore deleniti voluptates.
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Provident possimus pariatur totam velit quo. Dicta aliquam
+                  magni, blanditiis officia, corporis repellat quae, nihil
+                  maxime enim facere deserunt labore deleniti voluptates.
                   <strong>texto</strong>
                 </figcaption>
               </figure>
